--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -173,11 +173,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="2dp">
+                android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/textView5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/ibm_bold"
@@ -186,244 +185,11 @@
                     android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                     android:textColor="@android:color/black" />
 
-                <HorizontalScrollView
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerview_id1"
                     android:layout_width="match_parent"
-                    android:layout_height="180dp">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent">
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="110dp"
-                                android:layout_height="120dp"
-                                android:layout_margin="5sp"
-                                android:foreground="@mipmap/ic_launcher_round"
-                                app:cardCornerRadius="15dp"
-                                app:cardElevation="8sp" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="@string/Vitaminsandsupplements"
-                                android:textAlignment="center"
-                                android:textColor="@android:color/black"
-                                android:textSize="18sp" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="110dp"
-                                android:layout_height="120dp"
-                                android:layout_margin="5sp"
-                                android:backgroundTint="@color/teal_200"
-                                app:cardCornerRadius="15dp"
-                                app:cardElevation="8sp" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="@string/ayurveda"
-                                android:textAlignment="center"
-                                android:textColor="@android:color/black"
-                                android:textSize="18sp" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="110dp"
-                                android:layout_height="120dp"
-                                android:layout_margin="5sp"
-                                android:backgroundTint="@color/teal_200"
-                                app:cardCornerRadius="15dp"
-                                app:cardElevation="8sp" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="@string/Healthcaredevices"
-                                android:textAlignment="center"
-                                android:textColor="@android:color/black"
-                                android:textSize="18sp" />
-
-                        </LinearLayout>
-                    </LinearLayout>
-                </HorizontalScrollView>
-
-                <HorizontalScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="180dp">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent">
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="110dp"
-                                android:layout_height="120dp"
-                                android:layout_margin="5sp"
-                                android:backgroundTint="@color/teal_200"
-                                app:cardCornerRadius="15dp"
-                                app:cardElevation="8sp" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="@string/Nutritionaldrinks"
-                                android:textAlignment="center"
-                                android:textColor="@android:color/black"
-                                android:textSize="18sp" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="110dp"
-                                android:layout_height="120dp"
-                                android:layout_margin="5sp"
-                                android:backgroundTint="@color/teal_200"
-                                app:cardCornerRadius="15dp"
-                                app:cardElevation="8sp" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="@string/skincare"
-                                android:textAlignment="center"
-                                android:textColor="@android:color/black"
-                                android:textSize="18sp" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="110dp"
-                                android:layout_height="120dp"
-                                android:layout_margin="5sp"
-                                android:backgroundTint="@color/teal_200"
-                                app:cardCornerRadius="15dp"
-                                app:cardElevation="8sp" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="@string/Homeopathy"
-                                android:textAlignment="center"
-                                android:textColor="@android:color/black"
-                                android:textSize="18sp" />
-
-                        </LinearLayout>
-                    </LinearLayout>
-                </HorizontalScrollView>
-
-                <HorizontalScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="180dp">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent">
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="110dp"
-                                android:layout_height="120dp"
-                                android:layout_margin="5sp"
-                                android:backgroundTint="@color/teal_200"
-                                app:cardCornerRadius="15dp"
-                                app:cardElevation="8sp" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="@string/ayurveda"
-                                android:textAlignment="center"
-                                android:textColor="@android:color/black"
-                                android:textSize="18sp" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="110dp"
-                                android:layout_height="120dp"
-                                android:layout_margin="5sp"
-                                android:backgroundTint="@color/teal_200"
-                                app:cardCornerRadius="15dp"
-                                app:cardElevation="8sp" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="@string/Painreleif"
-                                android:textAlignment="center"
-                                android:textColor="@android:color/black"
-                                android:textSize="18sp" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="110dp"
-                                android:layout_height="120dp"
-                                android:layout_margin="5sp"
-                                android:backgroundTint="@color/teal_200"
-                                app:cardCornerRadius="15dp"
-                                app:cardElevation="8sp" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="@string/Sexualwellness"
-                                android:textAlignment="center"
-                                android:textColor="@android:color/black"
-                                android:textSize="18sp" />
-
-                        </LinearLayout>
-                    </LinearLayout>
-                </HorizontalScrollView>
-
-
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
