updated cart api

--- a/app/src/main/res/layout/fragment_my_cart.xml
+++ b/app/src/main/res/layout/fragment_my_cart.xml
@@ -88,150 +88,82 @@
 
             </androidx.cardview.widget.CardView>
 
-
-            <androidx.cardview.widget.CardView
+            <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/mycartrecycleview"/>
 
-                app:cardCornerRadius="5dp"
-                app:cardElevation="5dp"
-                app:cardUseCompatPadding="true"
-                app:contentPadding="10sp">
+<!--            <androidx.cardview.widget.CardView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+<!--                app:cardCornerRadius="5dp"-->
+<!--                app:cardElevation="2dp"-->
+<!--                app:cardUseCompatPadding="true"-->
+<!--                app:contentPadding="10sp">-->
 
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-
-                            android:text="Nivea Body Lotion,600ml"
-                            android:textColor="@color/black"
-                            android:textSize="18sp"
-                            android:textStyle="bold" />
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:orientation="vertical">-->
 
 
-                    </LinearLayout>
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:orientation="horizontal">-->
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="MRP-Rs.1500"
-                        android:textSize="16dp"
+<!--                        <TextView-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
 
-                        />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical|center_horizontal"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="12dp"
-                            android:text="Rs.999"
-                            android:textColor="@color/black"
-                            android:textSize="24dp"
+<!--                            android:text="Nivea Body Lotion,600ml"-->
+<!--                            android:textColor="@color/black"-->
+<!--                            android:textSize="18sp"-->
+<!--                            android:textStyle="bold" />-->
 
 
-                            />
+<!--                    </LinearLayout>-->
 
-                        <!--                    <ImageButton-->
-                        <!--                        android:layout_width="50dp"-->
-                        <!--                        android:layout_height="50sp"-->
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:text="MRP-Rs.1500"-->
+<!--                        android:textSize="16dp"-->
 
-                        <!--                        android:layout_marginLeft="250dp"-->
+<!--                        />-->
 
-                        <!--                         />-->
-                    </LinearLayout>
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_gravity="center_vertical|center_horizontal"-->
+<!--                        android:orientation="horizontal">-->
 
-
-                </LinearLayout>
-
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-                app:cardCornerRadius="5dp"
-                app:cardElevation="2dp"
-                app:cardUseCompatPadding="true"
-                app:contentPadding="10sp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+<!--                        <TextView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_marginTop="12dp"-->
+<!--                            android:text="Rs.999"-->
+<!--                            android:textColor="@color/black"-->
+<!--                            android:textSize="24dp"-->
 
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+<!--                            />-->
 
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+<!--                        &lt;!&ndash;                    <ImageButton&ndash;&gt;-->
+<!--                        &lt;!&ndash;                        android:layout_width="50dp"&ndash;&gt;-->
+<!--                        &lt;!&ndash;                        android:layout_height="50sp"&ndash;&gt;-->
+<!--                        &lt;!&ndash;                        android:background="@color/black"&ndash;&gt;-->
+<!--                        &lt;!&ndash;                        android:layout_marginLeft="250dp"&ndash;&gt;-->
 
-                            android:text="Nivea Body Lotion,600ml"
-                            android:textColor="@color/black"
-                            android:textSize="18sp"
-                            android:textStyle="bold" />
+<!--                        &lt;!&ndash;                         />&ndash;&gt;-->
+<!--                    </LinearLayout>-->
 
 
-                    </LinearLayout>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="MRP-Rs.1500"
-                        android:textSize="16dp"
-
-                        />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical|center_horizontal"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="12dp"
-                            android:text="Rs.999"
-                            android:textColor="@color/black"
-                            android:textSize="24dp"
+<!--                </LinearLayout>-->
 
 
-                            />
-
-                        <!--                    <ImageButton-->
-                        <!--                        android:layout_width="50dp"-->
-                        <!--                        android:layout_height="50sp"-->
-                        <!--                        android:background="@color/black"-->
-                        <!--                        android:layout_marginLeft="250dp"-->
-
-                        <!--                         />-->
-                    </LinearLayout>
-
-
-                </LinearLayout>
-
-
-            </androidx.cardview.widget.CardView>
+<!--            </androidx.cardview.widget.CardView>-->
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
