--- a/app/src/main/res/layout/fragment_address_book.xml
+++ b/app/src/main/res/layout/fragment_address_book.xml
@@ -1,24 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <RelativeLayout
+        android:id="@+id/toolbars"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/toolbars"
         android:background="@drawable/shape"
-        android:padding="16dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
+        android:padding="10dp">
+
+        <ImageButton
+            android:id="@+id/arrow_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:padding="10dp"
+            app:tint="@color/white"
+            tools:src="@drawable/arrow_back" />
+
+        <TextView
             android:id="@+id/login"
-            android:text="Edit Address"
-            android:textStyle="bold"
-            android:textSize="20dp"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/arrow_image"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Address Book"
+            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:textStyle="bold" />
     </RelativeLayout>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -34,25 +48,34 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20sp">
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/address1"
-                android:text="Jane Doe"
-                android:paddingLeft="8dp"
-                android:textStyle="bold"
-                android:textSize="20dp"/>
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/editadd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_margin="2dp"
-                android:backgroundTint="@color/white"
-                android:text="Edit"
-                android:textColor="@color/teal_200"
-                android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/address1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:paddingLeft="8dp"
+                    android:text="Jane Doe"
+                    android:layout_weight="1"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:id="@+id/editadd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:backgroundTint="@color/white"
+                    android:text="Edit"
+                    android:textColor="@color/teal_200"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
 
             <TextView
                 android:id="@+id/address2"
@@ -79,59 +102,7 @@
 
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/address_1"
-        app:cardElevation="20dp"
-        app:cardCornerRadius="25dp"
-        android:layout_margin="15dp">
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20sp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Jane Doe"
-                android:paddingLeft="8dp"
-                android:textStyle="bold"
-                android:textSize="20dp"/>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_margin="2dp"
-                android:backgroundTint="@color/white"
-                android:text="Edit"
-                android:textColor="@color/teal_200"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:text="3 Newbridge court"
-                android:textSize="18dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Chino Hills,CA 91709, United States"
-                android:textSize="18dp"
-                android:padding="5dp" />
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:text="Use as shipping address" />
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton2"
